Comments removal and deletion of Hmis view